# ForwardCaloUpgrade

FastSim/: BuildFile.xml
FastSim/StoreFiles/: CaloGeometryAnalyzer.cc  CaloGeometryDBEP.h  CaloGeometryDBReader_cfi.py  CaloGeometryHelper.cc  CaloGeometryHelper_he.cc  CalorimetryManager.cc  CalorimetryManager_he.cc  EEDetId.cc  EEDetId.h  EEGetSummary.cc  EERECO_Geometry_0.02LGap_600.db  EMShower.cc  EMShower.h  EcalEndcapGeometry.cc  EcalEndcapGeometry.h  EcalEndcapRecHitsMaker.cc  EcalHitMaker.cc  EcalHitMaker.h  EcalRecHitsCustom_cff.py  HcalDetId.h  HcalFlexiHardcodeGeometryLoader.cc  HcalTopology.cc  HcalTopologyIdealEP.cc  Pi_gun_withNewHEsegmentation.py
FastSim/data/: EventEcal.txt  EventEcal_SplitIn2_100GeV.txt  EventWithMissingCrystals.txt  EventWithMissingCrystals_1.txt
FastSim/interface/: CaloAnalyzer.h
FastSim/python/: DefaultHCAL_cff.py  HCALWithECALPbLSO_cff.py  LSO_cff.py  PBWO_cff.py  RadDamage_cff.py  Shashlik_PbLSO_cff.py  Shashlik_PbYAG_cff.py  caloanalyzer_cfi.py
FastSim/scripts/: Barbecue.C  Kill.sh  batchmanager.py  castortools.py  cmgAnalysis_Analyser.sh  (+4 more)
GEANT/: GNUmakefile  README  test_out01
GEANT_PROJECTS/HF/: CMakeLists.txt  ChangeLog  GNUmakefile  README  TODO  b.mac  detVis.mac  detVol.mac  detectorVolume.cc  mydetVol.mac  testBeam.cc  vis.mac
GEANT_PROJECTS/HF/include/: CMSHFDetectorConstruction.hh  CMSHFDetectorConstructionMessenger.hh  HFDataFormat.hh  HFDataFormatMessenger.hh  HFDetectorConstruction.hh  HFDetectorConstructionMessenger.hh  HFEventAction.hh  HFMessenger.hh  HFPhysicsList.hh  HFPhysicsListMessenger.hh  HFPrimaryGeneratorAction.hh  HFPrimaryGeneratorMessenger.hh  HFRunAction.hh  HFStackingAction.hh  HepMCG4AsciiReader.hh  HepMCG4AsciiReaderMessenger.hh  HepMCG4Interface.hh  OptFibreTools.hh  ParticleGunGenerator.hh  ParticleGunMessenger.hh
GEANT_PROJECTS/HF/scripts/: ShowLibDict.C  genShowerLibDict.sh
GEANT_PROJECTS/HF/src/: CMSHFDetectorConstruction.cc  CMSHFDetectorConstructionMessenger.cc  G4EmUserPhysics.cc  HFDataFormat.cc  HFDataFormatMessenger.cc  HFDetectorConstruction.cc  HFDetectorConstructionMessenger.cc  HFEventAction.cc  HFMessenger.cc  HFPhysicsList.cc  HFPhysicsListMessenger.cc  HFPrimaryGeneratorAction.cc  HFPrimaryGeneratorMessenger.cc  HFPrimaryGeneratorMessneger.cc  HFRunAction.cc  HFStackingAction.cc  HFSteppingAction.cc  HFSteppingVerbose.cc  HepMCG4AsciiReader.cc  HepMCG4AsciiReaderMessenger.cc  HepMCG4Interface.cc  OptFibreTools.cc  ParticleGunGenerator.cc  ParticleGunMessenger.cc
HE_upgrade/: hadupg.cc  vis.mac
Pythia/: JetsGen.cc  JetsGen.in  Makefile  MinbiasGen.cc  MinbiasGen.in  ParticleGunGen.cc  ParticleGunGen.in  README  config.mk
UpdatedShashlik/: README
test/: SinglePigun_FASTSIM_cfg.py
(+236 files in other folders)
